--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.4.6
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   open_document: ^1.0.7
   path_provider: ^2.1.0
   pdf: ^3.10.4
