--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   build_runner: ^2.4.6
+  cloud_firestore: ^4.9.0
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  intl: ^0.18.1
   open_document: ^1.0.7
   path_provider: ^2.1.0
   pdf: ^3.10.4
